fix: améliorer le contraste des badges technos

--- a/src/main.css
+++ b/src/main.css
@@ -47,11 +47,11 @@
 
   /* Variantes */
   .btn-primary {
-    @apply bg-cyan-600 text-white hover:bg-cyan-800;
+    @apply bg-cyan-700 text-white hover:bg-cyan-800;
   }
 
   .btn-secondary {
-    @apply border bg-cyan-50 border-cyan-600 text-cyan-600 hover:bg-cyan-600 hover:text-white;
+    @apply border bg-cyan-50 border-cyan-700 text-cyan-700 hover:bg-cyan-700 hover:text-white;
   }
 
   /* Tailles */
